Update PlanetModel.java